Fix: landing page buttons collide on mobile.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -685,7 +685,7 @@ footer {
     .prijava-delavnice {
       width: 17rem;
       left: calc(50vw - 8.5rem);
-      top: 70vh;
+      top: 40rem;
     }
   }
   .obvestilo-card {
